--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ before_install:
   - cd $HOME/drupal-*
   - ln -s $TRAVIS_BUILD_DIR sites/all/modules/islandora_solution_pack_document
   - ln -s $HOME/islandora_solution_pack_collection sites/all/modules/islandora_solution_pack_collection
+  - ln -s $HOME/islandora_jodconverter sites/all/modules/islandora_jodconverter
   - drush dl imagemagick
+  - drush dl libraries
   - drush en --user=1 --yes imagemagick islandora_basic_collection islandora_document
 script:
   - ant -buildfile sites/all/modules/islandora_solution_pack_document/build.xml lint
