--- a/islandora_document.info.yml
+++ b/islandora_document.info.yml
@@ -6,6 +6,7 @@ dependencies:
   - imagemagick:imagemagick
   - :islandora_jodconverter
 package: 'Islandora Solution Packs'
+configure: islandora_document.admin
 core: 8.x
 type: module
 php: '5.5.9'
