Add some periods.

--- a/islandora_document.info.yml
+++ b/islandora_document.info.yml
@@ -1,5 +1,5 @@
 name: 'Islandora Document'
-description: 'A default Islandora Repository module to handle documents'
+description: 'A default Islandora Repository module to handle documents.'
 dependencies:
   - :islandora
   - file
